2009-03-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-video-thumbnailer.c: Fix Cairo #include, spotted by Chris
	Vine <chris@cvine.freeserve.co.uk>. (Closes: #576067)

2009-03-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Brown paper bag revert
	of the last commit to fix the OpenSubtitles plugin. (Closes: #575771)

2009-03-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Remove a reference to
	the gettext functions remaining from the previous commit.

2009-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem/__init__.py: Import gettext and set the
	translation domain when importing the module

	* src/plugins/coherence_upnp/coherence_upnp.py:
	* src/plugins/jamendo/jamendo.py:
	* src/plugins/opensubtitles/opensubtitles.py:
	* src/plugins/youtube/youtube.py: Use the gettext set in the
	totem Python module

	Spotted by Gabor Kelemen <kelemeng@gnome.hu> (Closes: #574700)

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/publish/totem-publish.c
	(totem_publish_plugin_activate): Americanized a string.

	Updated svn:ignore properties.

2009-03-08  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.ui:
	* src/plugins/opensubtitles/opensubtitles.totem-plugin.in:
	* src/plugins/youtube/youtube.totem-plugin.in: Fixed capitalisation in
	a couple of strings. Notably changes the name of the opensubtitles
	plugin to "Subtitle Downloader" (from "Subtitles downloader").
	(Helps: #574524)

2009-03-05  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Patch from Ignacio Casal
	Quinteiro <nacho.resa@gmail.com> to fix language selection in the
	OpenSubtitles plugin. (Closes: #572733)

2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/coherence_upnp/coherence_upnp.py: Mark some strings
	as translatable and ensure gettext is imported to the Coherence
	plugin.
