@@ -1,3 +1,9 @@
+2009-03-22  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* src/plugins/opensubtitles/opensubtitles.py:
+	* src/plugins/opensubtitles/opensubtitles.ui:
+	If the sub name is long, do not resize the dialog (Fixes bug #576208).
+
 2009-03-20  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/totem-video-thumbnailer.c: Fix Cairo #include, spotted by Chris
